# trabalho-

./: .dockerignore  .gitattributes  Dockerfile  dockerfile  from typing import Optional.py  main.py  models.py  processor.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-publish.yml
dados/: usuarios.csv
dados/resultado/: report.json  valid.csv
src/: csv_analyzer.py
